--- a/3.html
+++ b/3.html
@@ -12,7 +12,7 @@
     <li><a href="3.html">JavaScript</a></li>
   </ol>
 
-  <h2>HTML</h2>
+  <h2>JavaScript</h2>
 
   <p> JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language.
      Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online
